# testvv

./: Cargo.toml  README.md  hawkes_results.csv  validate_hawkes_estimates.py
examples/: hawkes_optimized_test.rs  hawkes_test.rs
src/: hawkes_model.rs  hawkes_results.csv  main.rs
