[package]
name = "hawkes_live"
version = "0.1.0"
edition = "2021"

[dependencies]
ninjabook = { path = "../ninjabook" }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.4"
chrono = "0.4"
rand = "0.8"
rand_distr = "0.4"
nalgebra = "0.32"